# simpleVicsek

./: .gitignore  CMakeLists.txt  LICENSE  README.md  __init__.py  main.py
include/: Box.hpp  Particle.hpp  Point2D.hpp  RandomClass.hpp  System.hpp  Vicsek.hpp
pybind/: CMakeLists.txt  exportBox.hpp  exportParticle.hpp  exportPoint2D.hpp  exportSystem.hpp  exportVicsek.hpp  pybindexport.cpp
src/: Box.cpp  Point2D.cpp  RandomClass.cpp  System.cpp  Vicsek.cpp
test/: CMakeLists.txt  basicTests.cpp
